--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>Svelte • TodoMVC</title>
+	<title>Хотелки Никиты</title>
 	<link rel="icon" type="image/png" href="/favicon.png" />
 
 	<style>
@@ -14,7 +14,15 @@
 		body {
 			background-image: url("src/wolf.jpg") !important;
 		}
+
+		.todoapp {
+			margin: 170px 0 40px 0 !important;
+		}
 	</style>
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400;700&family=Luckiest+Guy&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
