--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 	</style>
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400;700&family=Luckiest+Guy&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400;700&family=Luckiest+Guy&family=Roboto+Slab:wght@300&display=swap" rel="stylesheet">
+	
 </head>
 
 <body>
@@ -37,9 +38,6 @@
 			target: document.querySelector('.todoapp')
 		});
 	</script>
-
-	<script defer src="/todomvc-common/base.js"></script>
-	<link rel="stylesheet" href="/todomvc-common/base.css">
 </body>
 
 </html>
