--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
 		body {
 			background-image: url("src/wolf.jpg") !important;
+			max-width: 666px !important;
 		}
 
 		.todoapp {
@@ -22,7 +23,7 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400;700&family=Luckiest+Guy&family=Roboto+Slab:wght@300&display=swap" rel="stylesheet">
-	
+
 </head>
 
 <body>
