--- a/index.html
+++ b/index.html
@@ -13,54 +13,7 @@
 
 		body {
 			background-image:
-				url('./src/wolves/img01.webp'),
-				url('./src/wolves/img02.webp'),
-				url('./src/wolves/img03.webp'),
-				url('./src/wolves/img05.webp'),
-				url('./src/wolves/img06.webp'),
-				url('./src/wolves/img07.webp'),
-				url('./src/wolves/img08.webp'),
-				url('./src/wolves/img09.webp'),
-				url('./src/wolves/img10.webp'),
-				url('./src/wolves/img11.webp'),
-				url('./src/wolves/img12.webp'),
-				url('./src/wolves/img13.webp'),
-				url('./src/wolves/img01.webp'),
-				url('./src/wolves/img02.webp'),
-				url('./src/wolves/img03.webp'),
-				url('./src/wolves/img05.webp'),
-				url('./src/wolves/img06.webp'),
-				url('./src/wolves/img07.webp'),
-				url('./src/wolves/img08.webp'),
-				url('./src/wolves/img09.webp'),
-				url('./src/wolves/img10.webp'),
-				url('./src/wolves/img11.webp'),
-				url('./src/wolves/img12.webp'),
-				url('./src/wolves/img13.webp'),
-				url('./src/wolves/img01.webp'),
-				url('./src/wolves/img02.webp'),
-				url('./src/wolves/img03.webp'),
-				url('./src/wolves/img05.webp'),
-				url('./src/wolves/img06.webp'),
-				url('./src/wolves/img07.webp'),
-				url('./src/wolves/img08.webp'),
-				url('./src/wolves/img09.webp'),
-				url('./src/wolves/img10.webp'),
-				url('./src/wolves/img11.webp'),
-				url('./src/wolves/img12.webp'),
-				url('./src/wolves/img13.webp') !important;
-			background-size: 250px 250px !important;
-			background-repeat: no-repeat !important;
-			background-position:
-				0 0, 250px 0, 500px 0, 750px 0,
-				0 250px, 250px 250px, 500px 250px, 750px 250px,
-				0 500px, 250px 500px, 500px 500px, 750px 500px,
-				0 750px, 250px 750px, 500px 750px, 750px 750px,
-				0 1000px, 250px 1000px, 500px 1000px, 750px 1000px,
-				0 1250px, 250px 1250px, 500px 1250px, 750px 1250px,
-				0 1500px, 250px 1500px, 500px 1500px, 750px 1500px,
-				0 1750px, 250px 1750px, 500px 1750px, 750px 1750px,
-				0 2000px, 250px 2000px, 500px 2000px, 750px 2000px !important;
+				url('./src/wolves/bg.jpg') !important;
 			min-height: 100vh !important;
 			max-width: 666px !important;
 		}
